// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays an error message without a community url with checkAndSubmit 1`] = `
<KeyboardFriendlyView>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Choose an address for your community
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Your URL is the address that members will use to access your community online. The shorter the better!
  </Text>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Whats the name of your community?
    </Text>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      onChangeText={[Function]}
      returnKeyType="next"
      underlineColorAndroid="rgba(0,0,0,0)"
      value={undefined}
    />
  </View>
  <View>
    <View>
      <View />
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Please enter a URL
        </Text>
      </View>
    </View>
  </View>
  <View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Continue
        </Text>
      </View>
    </View>
  </View>
</KeyboardFriendlyView>
`;

exports[`matches last snapshot 1`] = `
<KeyboardFriendlyView>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Choose an address for your community
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Your URL is the address that members will use to access your community online. The shorter the better!
  </Text>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Whats the name of your community?
    </Text>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      onChangeText={[Function]}
      returnKeyType="next"
      underlineColorAndroid="rgba(0,0,0,0)"
      value={undefined}
    />
  </View>
  <Button
    disabled={false}
    onPress={[Function]}
    text="Continue"
  />
</KeyboardFriendlyView>
`;

exports[`matches last snapshot when there is an error 1`] = `
<KeyboardFriendlyView>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Choose an address for your community
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Your URL is the address that members will use to access your community online. The shorter the better!
  </Text>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Whats the name of your community?
    </Text>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      onChangeText={[Function]}
      returnKeyType="next"
      underlineColorAndroid="rgba(0,0,0,0)"
      value={undefined}
    />
  </View>
  <View>
    <View>
      <View />
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          This is an error
        </Text>
      </View>
    </View>
  </View>
  <View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Continue
        </Text>
      </View>
    </View>
  </View>
</KeyboardFriendlyView>
`;
